# UHD-challenge

./: .gitignore  README.md  requirements.txt
ArduinoIDE/coreS3_ESP-DL/: coreS3_ESP-DL.ino
ESP_IDF_Core3/: .gitignore  CMakeLists.txt  COMMIT_MESSAGE.txt  DEPLOY_MODEL.md  DEVELOPMENT_PHASES.md  FLASH_INSTRUCTIONS.md  GC0308_DEBUG_NOTES.md  PHASE2A_CHECKLIST.md  PHASE2_STATUS.md  PSRAM_NOTES.md  README.md  REVISED_PHASES.md  SPECIFICATIONS.md  partitions.csv  sdkconfig.defaults
ESP_IDF_Core3/main/: CMakeLists.txt  GC0308.h  idf_component.yml  main.cpp  main_backup_model_load_working.cpp.bak  realtime_camera.cpp  realtime_camera_backup.cpp  realtime_camera_bsp.cpp  realtime_camera_bsp_backup.cpp  sdjpagview.cpp
M5StackS3/: README.md  platformio copy.ini  platformio.ini
M5StackS3/main/: uhd_n_w64_nopost
M5StackS3/src copy/: main.cpp.bak
M5StackS3/src copy 2/: main.cpp.bak2
M5StackS3_camera_test/: README.md
Tab5/: README.md
Xiao ESP32 S3 Sense/: README.md
model_conversion/: CONVERSION_STATUS_REPORT.md  README.md  analyze_concat.py  analyze_model_structure.py  analyze_relu_model.py  batch_convert_all_models.py  check_class_labels.py  check_espdl_support.py  check_model_classes.py  check_nopost_espdl_support.py  check_nopost_model.py  convert_constants_to_bin.py  convert_npz_to_json.py  convert_to_espdl.py  create_multi_output_model.py  create_single_output_model.py  demo.py  pipeline.py  uhd_n_w64  uhd_n_w64.json  uhd_n_w64_multi  uhd_n_w64_multi.json
model_conversion_tflite/: .gitignore  README.md  convert_to_tflite.py  simplify_onnx.py
(+15 files in other folders)
